--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <a href="#how-it-works" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A] rounded px-1">How It Works</a>
           <a href="#features" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A] rounded px-1">Features</a>
           <a href="#privacy" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A] rounded px-1">Privacy</a>
-          <a href="#download" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A] rounded px-1">Install</a>
+          <a href="#install" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A] rounded px-1">Install</a>
         </div>
 
         <!-- Mobile hamburger -->
@@ -105,7 +105,7 @@
           <a href="#how-it-works" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded px-1">How It Works</a>
           <a href="#features" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded px-1">Features</a>
           <a href="#privacy" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded px-1">Privacy</a>
-          <a href="#download" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded px-1">Install</a>
+          <a href="#install" class="text-sm text-[#94A3B8] hover:text-[#F8FAFC] transition-colors py-1 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded px-1">Install</a>
         </div>
       </div>
     </div>
@@ -120,7 +120,7 @@
           <!-- Badge -->
           <div class="inline-flex items-center gap-1.5 px-3 py-1 rounded-full bg-blue-500/10 text-blue-400 text-sm font-medium mb-6">
             <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/></svg>
-            Free for macOS
+            Free &middot; Open Source &middot; macOS
           </div>
 
           <!-- Headline -->
@@ -134,9 +134,9 @@
           </p>
 
           <!-- CTA -->
-          <a href="https://github.com/peerjakobsen/mailstrom-app/releases/latest/download/Mailstrom.dmg" class="inline-flex items-center gap-2 px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg font-medium cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A]">
-            <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
-            Download for macOS
+          <a href="#install" class="inline-flex items-center gap-2 px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg font-medium cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A]">
+            Get Early Access
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/></svg>
           </a>
         </div>
 
@@ -301,76 +301,50 @@
       </div>
     </section>
 
-    <!-- Final CTA -->
-    <section id="download" class="py-16 md:py-24 px-4 sm:px-6 lg:px-8 scroll-mt-20">
-      <div class="max-w-3xl mx-auto text-center">
-        <h2 class="font-mono font-bold text-2xl md:text-3xl mb-6">Take back your inbox.</h2>
+    <!-- Install -->
+    <section id="install" class="py-16 md:py-24 px-4 sm:px-6 lg:px-8 scroll-mt-20">
+      <div class="max-w-4xl mx-auto">
+        <div class="text-center mb-12">
+          <h2 class="font-mono font-bold text-2xl md:text-3xl mb-4">Take back your inbox.</h2>
+          <p class="text-[#94A3B8] text-base md:text-lg max-w-2xl mx-auto">
+            Google requires an expensive security audit for apps that access Gmail. While we work through that process, there are two ways to try Mailstrom today:
+          </p>
+        </div>
 
-        <a href="https://github.com/peerjakobsen/mailstrom-app/releases/latest/download/Mailstrom.dmg" class="inline-flex items-center gap-2 px-6 py-3 bg-blue-500 hover:bg-blue-600 text-white rounded-lg font-medium cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A] mb-4">
-          <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
-          Download for macOS
-        </a>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
-        <p class="text-sm text-[#94A3B8] mb-12">Free &middot; macOS</p>
-
-        <!-- Installation Guide -->
-        <div class="max-w-2xl mx-auto text-left">
-          <div class="border border-[#334155] bg-[#1E293B]/30 rounded-xl p-6 md:p-8">
-            <div class="flex items-start gap-3 mb-6">
-              <svg class="w-5 h-5 text-yellow-500/70 mt-0.5 shrink-0" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-              <div>
-                <p class="font-mono font-bold text-base text-[#CBD5E1] mb-1">Installation requires a quick Terminal step</p>
-                <p class="text-sm text-[#94A3B8] leading-relaxed">Mailstrom is free and open-source but not signed with an Apple Developer certificate. macOS will block unsigned apps by default, so you need to remove the quarantine flag after installing. This is a one-time step.</p>
-              </div>
+          <!-- Card 1: Build It Yourself -->
+          <div class="border border-[#334155] bg-[#1E293B]/30 rounded-xl p-6 md:p-8 flex flex-col">
+            <div class="inline-flex items-center justify-center w-12 h-12 rounded-xl bg-[#F8FAFC]/5 mb-5">
+              <svg class="w-6 h-6 text-[#F8FAFC]" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
             </div>
-
-            <ol class="space-y-5">
-              <!-- Step 1 -->
-              <li class="flex gap-4">
-                <span class="shrink-0 inline-flex items-center justify-center w-7 h-7 rounded-full bg-blue-500/10 text-blue-400 font-mono text-sm font-bold">1</span>
-                <div class="min-w-0">
-                  <p class="text-sm text-[#F8FAFC] font-medium mb-1">Open the DMG and drag Mailstrom to Applications</p>
-                  <p class="text-sm text-[#94A3B8]">Double-click the downloaded <code class="font-mono text-blue-400/80 bg-blue-500/10 px-1.5 py-0.5 rounded text-xs">Mailstrom.dmg</code> file and drag the app icon into your Applications folder.</p>
-                </div>
-              </li>
-
-              <!-- Step 2 -->
-              <li class="flex gap-4">
-                <span class="shrink-0 inline-flex items-center justify-center w-7 h-7 rounded-full bg-blue-500/10 text-blue-400 font-mono text-sm font-bold">2</span>
-                <div class="min-w-0">
-                  <p class="text-sm text-[#F8FAFC] font-medium mb-1">Remove the quarantine flag via Terminal</p>
-                  <p class="text-sm text-[#94A3B8] mb-2">Open <strong class="text-[#CBD5E1]">Terminal</strong> (search for it in Spotlight with <kbd class="font-mono text-xs bg-[#334155] px-1.5 py-0.5 rounded border border-[#475569]">&#8984; Space</kbd>) and paste this command:</p>
-                  <div class="relative group">
-                    <pre class="font-mono text-sm bg-[#0F172A] border border-[#334155] rounded-lg px-4 py-3 text-blue-400 overflow-x-auto"><code>xattr -cr /Applications/mailstrom.app</code></pre>
-                    <button
-                      onclick="navigator.clipboard.writeText('xattr -cr /Applications/mailstrom.app');var t=this.querySelector('span');t.textContent='Copied!';setTimeout(function(){t.textContent='Copy'},1500)"
-                      class="absolute top-2 right-2 inline-flex items-center gap-1 px-2 py-1 text-xs text-[#94A3B8] hover:text-[#F8FAFC] bg-[#1E293B] border border-[#334155] rounded cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500"
-                      aria-label="Copy command to clipboard"
-                    >
-                      <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"/><path d="M5 15H4a2 2 0 01-2-2V4a2 2 0 012-2h9a2 2 0 012 2v1"/></svg>
-                      <span>Copy</span>
-                    </button>
-                  </div>
-                  <p class="text-xs text-[#94A3B8] mt-2">This tells macOS it's safe to open the app. You only need to do this once.</p>
-                </div>
-              </li>
-
-              <!-- Step 3 -->
-              <li class="flex gap-4">
-                <span class="shrink-0 inline-flex items-center justify-center w-7 h-7 rounded-full bg-blue-500/10 text-blue-400 font-mono text-sm font-bold">3</span>
-                <div class="min-w-0">
-                  <p class="text-sm text-[#F8FAFC] font-medium mb-1">Open Mailstrom from Applications</p>
-                  <p class="text-sm text-[#94A3B8]">Launch the app normally. If macOS still shows a warning, right-click the app and choose <strong class="text-[#CBD5E1]">Open</strong> instead of double-clicking.</p>
-                </div>
-              </li>
-            </ol>
-
-            <div class="mt-6 pt-5 border-t border-[#334155]">
-              <p class="text-xs text-[#94A3B8] leading-relaxed">
-                <strong class="text-[#CBD5E1]">Why is this needed?</strong> Apple requires developers to pay $99/year for a signing certificate. Mailstrom is a free, open-source project, so we skip that cost and pass the savings to you. The app is <a href="https://github.com/peerjakobsen/mailstrom-app" class="text-blue-400 hover:text-blue-300 underline underline-offset-2 focus:outline-none focus:ring-2 focus:ring-blue-500 rounded" target="_blank" rel="noopener noreferrer">fully open-source</a> — you can inspect every line of code.
-              </p>
-            </div>
+            <span class="inline-block font-mono text-sm font-bold text-blue-400 mb-2">For Developers</span>
+            <h3 class="font-mono font-bold text-lg mb-3">Build it yourself</h3>
+            <p class="text-sm text-[#94A3B8] leading-relaxed mb-6 flex-grow">
+              Clone the repo, create your own Google OAuth credentials, and build from source. Full setup instructions are in the README.
+            </p>
+            <a href="https://github.com/peerjakobsen/mailstrom-app" class="inline-flex items-center gap-2 px-5 py-2.5 border border-[#334155] hover:border-[#94A3B8] text-[#F8FAFC] rounded-lg text-sm font-medium cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A]" target="_blank" rel="noopener noreferrer">
+              <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+              View on GitHub
+            </a>
           </div>
+
+          <!-- Card 2: Early Access -->
+          <div class="border border-[#334155] bg-[#1E293B]/30 rounded-xl p-6 md:p-8 flex flex-col">
+            <div class="inline-flex items-center justify-center w-12 h-12 rounded-xl bg-blue-500/10 mb-5">
+              <svg class="w-6 h-6 text-blue-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z"/></svg>
+            </div>
+            <span class="inline-block font-mono text-sm font-bold text-blue-400 mb-2">Early Access</span>
+            <h3 class="font-mono font-bold text-lg mb-3">Get added as a tester</h3>
+            <p class="text-sm text-[#94A3B8] leading-relaxed mb-6 flex-grow">
+              Send me a message with your Gmail address and I'll add you as a test user. You'll get the full app with a direct download link.
+            </p>
+            <a href="https://www.linkedin.com/in/peerjakobsen/" class="inline-flex items-center gap-2 px-5 py-2.5 bg-blue-500 hover:bg-blue-600 text-white rounded-lg text-sm font-medium cursor-pointer transition-colors focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-[#0F172A]" target="_blank" rel="noopener noreferrer">
+              <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.063-2.065 2.064 2.064 0 112.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+              Connect on LinkedIn
+            </a>
+          </div>
+
         </div>
       </div>
     </section>
